# JIT-compiler

./: CMakeLists.txt  README.md  main.cpp  test.TXT
headers/: Assembler.h  BCDict.h  Builder.h  Factorial.txt  Paths.h  Translator.h  commands.h  simple_string.h
src/: Assembler.cpp  BCDict.cpp  Builder.cpp  Translator.cpp  simple_string.cpp
